# KYZO

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_admin_auth.py
apps/kyzo/config/: config.py
apps/kyzo/data/: models.py
apps/kyzo_backend/: .env_template  run_backend.py
apps/kyzo_backend/api/: __init__.py  auth_depends.py  knowledge_routes.py  question_routes.py  test_router.py  user_routes.py
apps/kyzo_backend/api/depends/: auth_depends.py  llm_depends.py  role_depends.py  util_depends.py
apps/kyzo_backend/config/: __init__.py  config.py  messages.py  prompts.py
apps/kyzo_backend/core/: __init__.py  database.py
apps/kyzo_backend/data/: __init__.py  database.py  models.py  schemas.py  user_manager.py
apps/kyzo_backend/managers/: __init__.py  knowledge_manager.py  question_manager.py  test_manager.py  user_manager.py
apps/kyzo_backend/schemas/: __init__.py  base_schemas.py  knowledge_schemas.py  questions_schemas.py  schemas.py  tests_schemas.py  user_schemas.py
apps/kyzo_backend/scripts/: run_seeding.py  seed_data.py
apps/kyzo_backend/services/: __init__.py  auth_service.py  google_gen_ai_service.py  image_processing.py  llm_orchestrator.py  llm_service.py  openai_service.py  question_generator.py
apps/kyzo_frontend/: __init__.py  config.py  run.py
apps/kyzo_frontend/routes/: __init__.py  admin.py  main.py
apps/kyzo_frontend/static/css/: auth.css  base.css  profile.css  style.css
apps/kyzo_frontend/static/js/: admin-dashboard.js  (+7 more)
apps/kyzo_frontend/templates/: base.html  index.html  login.html  profile.html  register.html
(+4 files in other folders)
